# MCTomo

./: .gitignore  MCTomo.inp  README.md
CGAL-4.9/: CGALConfig.cmake  CGALExports.cmake  CGALLibConfig.cmake  CGAL_ImageIOLibConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
CGAL-4.9/auxiliary/: cgal_create_cmake_script.1
CGAL-4.9/config/: CGALConfig.cmake
CGAL-4.9/demo/Three/: CMakeLists.txt
CGAL-4.9/examples/Approximate_min_ellipsoid_d/: CMakeLists.txt
CGAL-4.9/examples/BGL_arrangement_2/: CMakeLists.txt
CGAL-4.9/examples/BGL_surface_mesh/: CMakeLists.txt
CGAL-4.9/examples/BGL_triangulation_2/: CMakeLists.txt
CGAL-4.9/examples/Min_annulus_d/: CMakeLists.txt
CGAL-4.9/examples/Min_circle_2/: CMakeLists.txt
CGAL-4.9/examples/Min_ellipse_2/: CMakeLists.txt
CGAL-4.9/examples/Min_quadrilateral_2/: CMakeLists.txt
CGAL-4.9/examples/Min_sphere_d/: CMakeLists.txt
CGAL-4.9/examples/Min_sphere_of_spheres_d/: CMakeLists.txt
CGAL-4.9/examples/RangeSegmentTrees/: CMakeLists.txt
CGAL-4.9/examples/Rectangular_p_center_2/: CMakeLists.txt
CGAL-4.9/examples/Triangulation_3/: cmake_install.cmake  fast_locate  fast_location_3.cpp  output  simple
CGAL-4.9/include/CGAL/: compiler_config.h  version.h
CGAL-4.9/lib/: libCGAL.so.12.0.0  libCGAL_Core.so.12  libCGAL_ImageIO.so.12
CGAL-4.9/src/: Makefile  cmake_install.cmake
CGAL-4.9/src/CGAL/: Makefile  all_files.cpp  cmake_install.cmake
CGAL-4.9/src/CGAL_Core/: Makefile  all_files.cpp  cmake_install.cmake
CGAL-4.9/src/CGAL_ImageIO/: Makefile  all_files.cpp  cmake_install.cmake
CGAL-4.9/src/CGAL_Qt5/: Makefile  cmake_install.cmake
example1/: MCTomo.inp
example1/Results/ini/: InitialSample_1.txt  InitialSample_2.txt
examples/2dExample/: MCTomo.inp
examples/2dExample/Results/ini/: InitialSample_1.txt  InitialSample_2.txt  InitialSample_3.txt  InitialSample_4.txt
examples/2dExample/Results/resume/: run_time_vertices_1.txt  run_time_vertices_2.txt  run_time_vertices_3.txt  run_time_vertices_4.txt
examples/example1/Results/ini/: InitialSample_3.txt  InitialSample_4.txt
examples/example2/body/: MCTomo.inp
examples/example2/body/Results/ini/: InitialSample_1.txt  InitialSample_2.txt
examples/example2/joint/: MCTomo.inp
examples/example2/surf/: MCTomo.inp
fastmarching/: CMakeLists.txt  Makefile  fastMarching.cpp
fastmarching/examples/: CMakeLists.txt
fastmarching/fm2/: fm2.hpp
fastmarching/fmm/: ddqm.hpp  eikonalsolver.hpp  eikonalsolver_cube.hpp  fmm.hpp  sfmm.hpp  solver.hpp
fastmarching/gradientdescent/: ExtractArrivals.hpp
fastmarching/io/: gridwriter.hpp  maploader.hpp
fastmarching/ndgridmap/: ndgridmap.hpp  ndgridmap_cube.hpp
fm2d/: Makefile  fm2d_globalp.f90  fm2d_ttime.f90  fm2dray_cartesian.f90
mcmc2d/: .gitignore  MCTomo.F90  MCTomo.inp  Makefile  Makefile_modelling  Makefile_prior  forward_modelling.f90  hmc.f03  hmc.f90  hmcmc2d.f90  initialise.f90  likelihood.F90  likelihood_body.F90  likelihood_dd.F90  likelihood_ddsettings.f90  likelihood_joint.f90  likelihood_settings.f90  likelihood_surf.F90  likelihood_surf_mmodes.F90  likelihood_surf_phase.F90  likelihood_surf_prior.F90  mcmc.f90  mcmc2.f90  read_write.f90  run_time_info.f90  sample.f90  settings.f90  slice_sampling.f90
plot/: plotResults.py  plotVoronoi.py  plot_all_var.m  plot_all_voronoi.m  plot_misfits.m  plot_ncells.m  plot_point_values.m  plot_sigma.m  plot_sources.m  plot_sources2.m  plot_var.m  plot_voronoi.m  run_time_vertices_1.txt  run_time_vertices_2.txt
src/: MCTomo.F90  Makefile_mac  Makefile_modelling  cgal_delaunay.cpp  cgal_delaunay_wrapper.f90  crop_and_extract.cpp  crop_and_extract.h  fastMarching_wrapper.f90  forward_modelling.f90  hmc.f03  hmc.f90  hmcmc.f90  initialise.f90  kdtree2.f90  likelihood.f90  likelihood_body.F90  likelihood_settings.f90  likelihood_surf.F90  likelihood_surf_mmode.F90  m_kdtree.f90  makefile  mcmc_loc.f90  mcmc_loc2.f90  netcdf_read_write.f90  read_write.f90  run_time_info.f90  sample.f90  settings.f90  slice_sampling2.f90  utils.f90
surfmodes/: C_interval.f90  C_interval_L.f90  GRT.f90  Love.f90  Makefile  Makefile2  Rayleigh.f90  SearchLove.f90  SearchRayleigh.f90  disper.f90  eigenfunctions.f90  eigenfunctions_L.f90  hash.f90  surfdisp96.f  surfmodes.f90  util.f90
utils/: Makefile  c_utils.cpp  mt19937.f90  utils.f90
